# langur

./: .gitignore  LICENSE  README.md  pyproject.toml
baml_src/: clients.baml  generators.baml  planner.baml  task_to_actions.baml  task_to_actions_test.baml
challenges/: challenge_runner.py
challenges/grader/: agent.py  main.py
challenges/prime_comparison/: agent.py
examples/: calculator.py  lc_toolkit.py  lc_wikipedia.py  prime_methods.py
examples/grader/: grader.py
langur/: __init__.py  actions.py  agent.py  behavior.py  commands.py  connector.py  event_manager.py  graph.py  langur.py  llm.py  signals.py  state_tracker.py  viewer.py  worker.py  workspace_worker.py  world.py
langur/baml_client/: inlinedbaml.py
langur/baml_src/: assumptions.baml  clients.baml  fill_params.baml  generators.baml  old_planner.baml  planner.baml  task_to_actions.baml  task_to_actions_test.baml  think.baml
langur/connectors/: __init__.py  assumer.py  code_runner.py  cognitive.py  cognitive_connector.py  connector.py  connector_worker.py  llm.py  old_connector.py  old_workspace.py  terminal.py  terminal_output.py  user_chat.py  web.py  workspace.py  workspace_connector.py
langur/graph/: __init__.py  edge.py  graph.py  node.py
langur/prompts/: jinja.py  templates.py
langur/util/: baml_type_converter.py  general.py  model_builder.py  registries.py  schema.py  test_schema.py  type_index.py
langur/workers/: assumer.py  connector.py  events.py  executor.py  planner.py  subtask_planner.py  task.py  worker.py  worker_foo.py  worker_v2.py  workspace_connector.py
(+9 files in other folders)
