[project]
name = "langur"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "baml-py>=0.64.0",
    "fs>=2.4.16",
    "ipykernel>=6.29.5",
    "ipysigma>=0.24.3",
    "nest-asyncio>=1.6.0",
    "networkx>=3.4.2",
    "pydantic>=2.9.2",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
